@@ -11,7 +11,8 @@
 
 static int idTable[] = {IDC_STAT_FILETYPE, IDC_SAVE_MRC, IDC_COMPRESSED_TIFF, 
   IDC_TIFF_ZIP_COMPRESS, IDC_ONE_FRAME_PER_FILE, IDC_PACK_RAW_FRAME, IDC_SKIP_ROTFLIP, 
-  IDC_PACK_COUNTING_4BIT, IDC_USE_4BIT_MRC_MODE, IDC_SAVE_TIMES_100, PANEL_END, 
+  IDC_PACK_COUNTING_4BIT, IDC_USE_4BIT_MRC_MODE, IDC_SAVE_TIMES_100, IDC_SAVE_UNNORMALIZED
+  , IDC_USE_EXTENSION_MRCS, PANEL_END, 
   IDC_STAT_COMPTITLE, IDC_STAT_USE_COMP, IDC_STAT_FOLDER, IDC_STAT_FILE, IDC_STAT_EXAMPLE,
   IDC_CHECK_ROOT_FOLDER, IDC_EDIT_BASENAME, IDC_CHECK_ROOT_FILE,
   IDC_CHECK_SAVEFILE_FILE, IDC_CHECK_SAVEFILE_FOLDER, IDC_CHECK_NAVLABEL_FOLDER, 
